# dot-ui

./: README.md  pyproject.toml  setup.cfg  setup.py
debug/: log.txt
src/: other_test.py  simple_pg.py  test.py
src/dot_ui/: __init__.py  libraries.py
src/dot_ui/input/: input_manager.py  key.py  mouse.py
src/dot_ui/renderer/: default_renderer.py  renderer.py  shadow_experiments.md
src/dot_ui/utils/: animations.py  color.py  draw.py  general.py  timer.py  utils.py  vectors.py
src/dot_ui/widgets/: base_widget.py  container_widget.py  text_widget.py  widget_behaviour.py  widgets.py  window_widget.py
src/dotui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/widgeon/: __init__.py
src/widgeon.egg-info/: PKG-INFO
src/widgeon/input/: input_manager.py  key.py
src/widgeon/utils/: animations.py  color_constants.py  draw.py  general.py
src/widgets.egg-info/: PKG-INFO  SOURCES.txt
