[metadata]
name = dotui
version = 0.0.1
author = dots-me
author_email = simon.l.kriele@gmail.com
description = A simple to use UI creation framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/dots-git/dot-ui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
package_data =
    =
        data/empty_icon.png
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src